# AAAAT

./: .gitattributes  .gitignore  .temporary-profile-fix.py  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  SKILL.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: agent-contract-tests.yml  build-test-package.yml  ci.yml  release-installers.yml  release.yml  temporary-cli-cleanup.yml  temporary-profile-result-fix.yml  v1-desktop-release-readiness.yml
.private/: aaaat.sqlite3
aaaat/: SKILL.md  __init__.py  advanced_command_fixture.py  agent_access.py  agent_actions.py  agent_guides.py  agent_intake.py  agent_work.py  agent_work_service.py  application_commands.py  artifacts.py  assistance.py  assistance_service.py  assisted_profile.py  background_worker.py  bounded_subprocess.py  browser_companion.py  candidature_fields.py  candidature_lifecycle.py  candidatures.py  career_plans.py  cli.py  compatibility.py  connector_packages.py  dashboard.py  dashboard_layout.py  dashboard_modules.py  dashboard_projection.py  dashboard_views.py  db.py  demo_seed.py  desktop_view_projection.py  desktop_workspace.py  file_exchange.py  generation_policy.py  host_bridge.py  host_bridge_smoke.py  host_connection.py  host_protocol.py  host_runtime_skill.md  (+52 more)
aaaat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
aaaat/dispatch/: __init__.py  command.py  manual.py  packet.py
aaaat/static/: README.md  alpine.min.js  htmx.min.js
aaaat/templates_ui/: dashboard.html
docs/: AAAAT Product Summary.md  agent-guide.md  agent-workflow.md  ai-integration.md  architecture.md  branch-protection.md  build-release.md  build-windows-release.md  cli.md  development-guardrails.md  development.md  install.md  local-data.md  local-release-validation.md  maintenance.md  mcp.md  openapi.md  product-owner-original-intent.md  product.md  release-checklist.md  release-installers.md  release-notes-v1.md  releasing.md  security-model.md  testing.md  user-guide.md
examples/: demo_payload.json
launchers/: Open AAAAT Desktop.cmd  Open AAAAT Read Only.cmd  Open AAAAT.cmd  open-aaaat-desktop.sh  open-aaaat-read-only.sh  open-aaaat.sh
scripts/: desktop_entry.py  host_bridge_entry.py  seed_desktop_demo.py
templates/: cover-letter.tex  cv.tex  recruiter-message.md
tests/: __init__.py  desktop_frame_construction.py  desktop_frame_smoke.py  desktop_launch_smoke.py  test_advanced_command_fixture.py  test_agent_access.py  test_agent_actions.py  test_agent_capability_contract.py  test_application_commands_and_fields.py  test_assistance_onboarding_contract.py  test_assistance_service.py  test_candidature_lifecycle.py  test_candidature_lifecycle_and_attempts.py  test_career_plans.py  test_cli_mcp.py  test_connector_browser_negotiation.py  test_connector_onboarding_language.py  test_dashboard_detailed_view.py  test_dashboard_layout_contract.py  test_dashboard_modes.py  test_dashboard_projection.py  test_dashboard_smart_view.py  test_dashboard_views.py  test_dashboard_welcome_user_views.py  test_db.py  test_demo_seed_safety.py  test_dependency_policy.py  test_desktop_agent_workflow.py  test_desktop_connection_handoff.py  test_desktop_material_attachment.py  test_desktop_material_details.py  test_desktop_profile_facts.py  test_desktop_release_startup.py  test_desktop_view_projection.py  test_desktop_views.py  test_desktop_workspace.py  test_dispatch.py  test_dispatch_command.py  test_domain_services.py  test_fastapi_server.py  (+48 more)
tools/: _apply_workspace_recovery_patch.py  aaaat-installer.iss  architecture_guard.py  build_maintenance_artifact.ps1  build_release.py  build_windows_release.ps1  repo_guard.py  validate_mcp.py  verify_release.py
(+105 files in other folders)
