[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aaaat"
version = "0.1.0"
description = "Local-first job application tracker and artifact generator."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
desktop = ["wxPython"]

[project.scripts]
aaaat = "aaaat.cli:main"
aaaat-desktop = "aaaat.ui_desktop.app:main"
aaaat-upgrade = "aaaat.upgrade:main"
aaaat-seed-desktop-demo = "aaaat.demo_seed:main"

[tool.setuptools]
packages = ["aaaat", "aaaat.dispatch", "aaaat.ui_desktop"]
include-package-data = true

[tool.setuptools.package-data]
aaaat = [
    "schema.sql",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
