[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aaaat"
version = "1.0.0"
description = "Local-first desktop workspace for managing job applications, preparing interviews and creating tailored application material with optional external-AI assistance."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications :: GTK",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
]

[project.urls]
Repository = "https://github.com/DidacLL/AAAAT"
Issues = "https://github.com/DidacLL/AAAAT/issues"

[project.optional-dependencies]
desktop = ["wxPython"]
release = ["pyinstaller>=6"]

[project.scripts]
aaaat-desktop = "aaaat.ui_desktop.app:main"
aaaat-host-bridge = "aaaat.host_bridge:main"

[tool.setuptools]
packages = ["aaaat", "aaaat.ui_desktop"]
include-package-data = true

[tool.setuptools.package-data]
aaaat = [
    "schema.sql",
    "SKILL.md",
]
